--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL= mongodb+srv://malik:spvadmin@mongokp.ss1co.mongodb.net/kelasPintar?retryWrites=true&w=majority
+DATABASE_URL= mongodb+srv://malik:spvadmin@mongokp.ss1co.mongodb.net/kelasPintar?ssl=true
